:bug: Fix form input overflow

--- a/assets/app.css
+++ b/assets/app.css
@@ -116,6 +116,7 @@ button:hover {
 
 input, textarea {
 	width: 100%;
+	box-sizing: border-box;
 }
 
 label {
